# DesktopPet

./: .gitignore  BACKPACK-IMPROVEMENTS.md  CI-CD-DEPLOYMENT-GUIDE.md  CMakeLists.txt  CMakeLists.txt.usr  CMakePresets.json  COLLECTION-SYSTEM-DESIGN.md  FEATURE_VERIFICATION_GUIDE.md  README.md  branch-test  check-ci-setup.bat  check-ci-setup.sh  deploy-ci.sh  deploy-windows.bat.in  resources.qrc  run_tests.ps1  setup-dev-env.bat  setup-dev-env.sh  test_collection_simple.cpp  vcpkg-configuration.json
.github/: README.md  badges-template.md
.github/workflows/: ci-windows-only.yml  ci.yml  performance.yml  quick-test-windows.yml  quick-test.yml  release-windows.yml  release.yml  security.yml
doc/mid/: mid.md
doc/topic/: topic.md
docs/: BADGES.md  CI-CD-GUIDE.md  CI-CD-PROCESS-EXPLANATION.md  CI-CD-QUICKSTART.md  GIT-BRANCH-GUIDE.md  GIT-MERGE-BEHAVIOR.md  GIT-MERGE-EXPLANATION.md  PET-SWITCHING-TEST.md  PLATFORM-SUPPORT.md
resources/csv/: collection_items.csv  item_info.txt
src/: DesktopPet.cpp  DesktopPet.h  DesktopPet.ui  main.cpp
src/app/: PetApp.cpp  PetApp.h  main.cpp
src/common/: CollectionManager.cpp  CollectionManager.h  CommandBase.h  CommandManager.cpp  CommandManager.h  CommandParameters.h  EventDefine.h  EventMgr.h  ForgeTypes.h  ItemInfo.h  PropertyIds.h  PropertyTrigger.cpp  PropertyTrigger.h  Singleton.h  Types.h
src/common/base/: BackpackItemInfo.h  CollectionInfo.h  PetInfo.h  WorkInfo.h
src/common/doc/: EventMgr.md
src/model/: AutoMovementModel.cpp  AutoMovementModel.h  BackpackModel.cpp  BackpackModel.h  CollectionModel.cpp  CollectionModel.h  ForgeModel.cpp  ForgeModel.h  PetModel.cpp  PetModel.h  WorkModel.cpp  WorkModel.h
src/model/base/: CollectionInfo.h  PetInfo.h  WorkInfo.h
src/view/: BackpackPanel.cpp  BackpackPanel.h  CollectionItemWidget.cpp  CollectionItemWidget.h  CollectionPanel.cpp  CollectionPanel.h  DesktopPet.cpp  DesktopPet.h  ForgePanel.cpp  ForgePanel.h  ItemSelectionDialog.cpp  ItemSelectionDialog.h  PetMainWindow.cpp  PetMainWindow.h  PetStatsPanel.cpp  PetStatsPanel.h  WorkPanel.cpp  WorkPanel.h  WorkUpgradePanel.cpp  WorkUpgradePanel.h
src/viewmodel/: PetViewModel.cpp  PetViewModel.h
src/viewmodel/commands/: AddExperienceCommand.cpp  AddExperienceCommand.h  AddMoneyCommand.cpp  AddMoneyCommand.h  AddTestItemCommand.cpp  AddTestItemCommand.h  AutoMovementCommand.cpp  AutoMovementCommand.h  ChangeStateCommand.cpp  ChangeStateCommand.h  ForgeCommand.cpp  ForgeCommand.h  MovePetCommand.cpp  MovePetCommand.h  ShowBackpackPanelCommand.cpp  ShowBackpackPanelCommand.h  ShowCollectionPanelCommand.cpp  ShowCollectionPanelCommand.h  ShowForgePanelCommand.cpp  ShowForgePanelCommand.h  ShowStatsPanelCommand.cpp  ShowStatsPanelCommand.h  ShowWorkPanelCommand.cpp  ShowWorkPanelCommand.h  ShowWorkUpgradePanelCommand.cpp  ShowWorkUpgradePanelCommand.h  StartWorkCommand.cpp  StartWorkCommand.h  StopWorkCommand.cpp  StopWorkCommand.h  SwitchPetCommand.cpp  SwitchPetCommand.h  ToggleVisibilityCommand.cpp  ToggleVisibilityCommand.h
test/integration/: CommandSystemIntegrationTest.cpp  CommunicationIntegrationTest.cpp  PetIntegrationTest.cpp  README.md
test/unit/: BasicTest.cpp
test/unit/common/: PropertyTriggerTest.cpp
test/unit/model/: PetModelTest.cpp
test/unit/view/: AdvancedPetMainWindowTest.cpp  MockCommand.h  PetMainWindowTest.cpp  TestHelpers.h
test/unit/viewmodel/: PetViewModelTest.cpp  SimpleVMTest.cpp
